Project

General

Profile

Bug #36710

[test] failure in "TestMigration.NoSnapsSnapAfterPrepare"

Added by Jason Dillaman over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/jdillaman-2018-11-05_18:12:54-rbd-wip-jd-testing-distro-basic-smithi/3227514/teuthology.log

2018-11-06T01:09:22.716 INFO:tasks.workunit.client.0.smithi050.stdout:[ RUN      ] TestMigration.NoSnapsSnapAfterPrepare
2018-11-06T01:09:23.087 INFO:tasks.workunit.client.0.smithi050.stdout:resize: 83886080
2018-11-06T01:09:23.116 INFO:tasks.workunit.client.0.smithi050.stdout:write: 1 0~8388609
2018-11-06T01:09:23.551 INFO:tasks.workunit.client.0.smithi050.stdout:write: 1 16777218~8388609
2018-11-06T01:09:23.896 INFO:tasks.workunit.client.0.smithi050.stdout:migration_prepare
2018-11-06T01:09:26.670 INFO:tasks.workunit.client.0.smithi050.stdout:snap_create: after_prepare_snap
2018-11-06T01:09:27.854 INFO:tasks.workunit.client.0.smithi050.stdout:resize: 41943040
2018-11-06T01:09:28.020 INFO:tasks.workunit.client.0.smithi050.stdout:write: * 0~1000
2018-11-06T01:09:28.048 INFO:tasks.workunit.client.0.smithi050.stdout:migration_execute
2018-11-06T01:09:29.269 INFO:tasks.workunit.client.0.smithi050.stdout:migration_commit
2018-11-06T01:09:29.660 INFO:tasks.workunit.client.0.smithi050.stdout:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/14.0.0-4803-gb738aa2/rpm/el7/BUILD/ceph-14.0.0-4803-gb738aa2/src/test/librbd/test_Migration.cc:85: Failure
2018-11-06T01:09:29.660 INFO:tasks.workunit.client.0.smithi050.stdout:      Expected: 0
2018-11-06T01:09:29.660 INFO:tasks.workunit.client.0.smithi050.stdout:To be equal to: librbd::api::Image<>::snap_set( m_ictx, cls::rbd::UserSnapshotNamespace(), dst_snap_name)
2018-11-06T01:09:29.660 INFO:tasks.workunit.client.0.smithi050.stdout:      Which is: -34
2018-11-06T01:09:29.661 INFO:tasks.workunit.client.0.smithi050.stdout:after commit snap: after_prepare_snap: size differs
2018-11-06T01:09:29.665 INFO:tasks.workunit.client.0.smithi050.stdout:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/14.0.0-4803-gb738aa2/rpm/el7/BUILD/ceph-14.0.0-4803-gb738aa2/src/test/librbd/test_Migration.cc:103: Failure
2018-11-06T01:09:29.665 INFO:tasks.workunit.client.0.smithi050.stdout:      Expected: src_size
2018-11-06T01:09:29.665 INFO:tasks.workunit.client.0.smithi050.stdout:      Which is: 83886080
2018-11-06T01:09:29.665 INFO:tasks.workunit.client.0.smithi050.stdout:To be equal to: dst_size
2018-11-06T01:09:29.665 INFO:tasks.workunit.client.0.smithi050.stdout:      Which is: 41943040
2018-11-06T01:09:29.843 INFO:tasks.workunit.client.0.smithi050.stdout:after commit snap: after_prepare_snap, block 0~4194304 differs

History

#1 Updated by Mykola Golub over 5 years ago

  • Assignee set to Mykola Golub

#2 Updated by Mykola Golub over 5 years ago

  • Status changed from New to In Progress

#3 Updated by Mykola Golub over 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 25175

#4 Updated by Jason Dillaman over 5 years ago

  • Status changed from Fix Under Review to Resolved

Also available in: Atom PDF