librbd: restart io if migration parent gone

Fixes: http://tracker.ceph.com/issues/36710
Signed-off-by: Mykola Golub <mgolub@suse.com>